adicionei um comentario de inicio de codigo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     rel="stylesheet">
 
 </head>
-
+<!-- Início do Body -->
 <body data-bs-theme="light">
   <header>
     <nav class="navbar-expand-lg navbar bg-body-tertiary fixed-top">
